<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login.LoginPage"
    >

    <TextView
        android:id="@+id/Title"
        android:layout_width="267dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/pacifico"
        android:text="@string/lastminute"
        android:textColor="#CD000000"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="232dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/appicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/round_top"
        android:drawableStart="@drawable/mail_icon"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:saveEnabled="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:saveEnabled="false"
        android:background="@drawable/round_bottom"
        android:drawableStart="@drawable/password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@drawable/trips_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textColor="@color/LightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forgotPassword"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.063"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/LightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.063"
        />


</androidx.constraintlayout.widget.ConstraintLayout>