<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login.Registration">

    <EditText
        android:id="@+id/registerName"
        android:layout_width="244dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/round_top"
        android:drawableStart="@drawable/user_icon"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:saveEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageName" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="244dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:background="@drawable/round_none"
        android:drawableStart="@drawable/mail_icon"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:saveEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/registerName"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/registerName"
        app:layout_constraintTop_toBottomOf="@+id/registerName"

        />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="244dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@drawable/round_bottom"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:saveEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toTopOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/trips_button"
        android:textColor="#FFF"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/loginPage"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword"
        app:layout_constraintStart_toStartOf="@+id/registerPassword" />

    <TextView
        android:id="@+id/loginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton" />

    <TextView
        android:id="@+id/pageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>