<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login.PasswordRecovery">

    <EditText
        android:id="@+id/passwordEmail"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:background="@drawable/round_all"
        android:drawableStart="@drawable/mail_icon"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEmail"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="397dp"
        android:layout_height="66dp"
        android:layout_marginTop="128dp"
        android:text="@string/password_reset"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details"
        android:layout_width="304dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:text="@string/enter_your_email_address_that_you_used_to_register_we_ll_send_you_an_email_with_a_link_to_reset_your_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#2E2E2E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>